src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/shadow/drag-to-meter-in-shadow-crash-expected.txt
CONSOLE ERROR: line 13: Uncaught TypeError: container.createShadowRoot is not a function
This test checks selecting from outside of a shadow tree and to inside of a shadow tree won't crash.

PASS
